[project]
name = "pickup-hoops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "pytest>=9.0.2",
    "requests>=2.33.1",
    "sqlmodel>=0.0.14",
    "streamlit>=1.56.0",
    "websockets<14",
]
